tests/spec/pass/go_struct_method.aja
type User:
    name: str
    age: int

fuc (u: User) greet(prefix: str) -> str:
    return prefix + " " + u.name

u = User("Aja", 21)
print(u.name)
print(u.age)
u.age = 22
print(u.age)
print(u.greet("Hi"))
