tests/spec/fail/named_arg_unknown.aja
fuc add(a: int, b: int) -> int:
    return a + b

print(add(a = 1, c = 2))
